fixing script location

--- a/JavaScript/04-BlurryLoading/index.html
+++ b/JavaScript/04-BlurryLoading/index.html
@@ -14,7 +14,7 @@
     <div class="loading-text">0%</div>
 
     <!-- Script -->
-    <script src="./style.css"></script>
+    <script src="./script.js"></script>
     <!-- Script -->
   </body>
 </html>
