updated Html file

--- a/JavaScript/05-IncrementCounter/index.html
+++ b/JavaScript/05-IncrementCounter/index.html
@@ -18,5 +18,33 @@
     <!-- Style.css -->
     <title>Increment Counter</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Twitter -->
+    <div class="counter-container">
+      <i class="fab fa-twitter fa-3x"></i>
+      <div class="counter" data-target="12000">12000</div>
+      <span>Twitter Followers</span>
+    </div>
+    <!-- Twitter -->
+
+    <!-- Youtube -->
+    <div class="counter-container">
+      <i class="fab fa-youtube fa-3x"></i>
+      <div class="counter" data-target="5200">5200</div>
+      <span>Youtube Subscribers</span>
+    </div>
+    <!-- Youtube -->
+
+    <!-- Facebook -->
+    <div class="counter-container">
+      <i class="fab fa-facebook fa-3x"></i>
+      <div class="counter" data-target="7500">7500</div>
+      <span>Facebook Fans</span>
+    </div>
+    <!-- Facebook -->
+
+    <!-- Script -->
+    <script src="./script.js"></script>
+    <!-- Script -->
+  </body>
 </html>
