--- a/JavaScript/05-IncrementCounter/index.html
+++ b/JavaScript/05-IncrementCounter/index.html
@@ -22,7 +22,7 @@
     <!-- Twitter -->
     <div class="counter-container">
       <i class="fab fa-twitter fa-3x"></i>
-      <div class="counter" data-target="12000">12000</div>
+      <div class="counter" data-target="12000"></div>
       <span>Twitter Followers</span>
     </div>
     <!-- Twitter -->
@@ -30,7 +30,7 @@
     <!-- Youtube -->
     <div class="counter-container">
       <i class="fab fa-youtube fa-3x"></i>
-      <div class="counter" data-target="5200">5200</div>
+      <div class="counter" data-target="5200"></div>
       <span>Youtube Subscribers</span>
     </div>
     <!-- Youtube -->
@@ -38,7 +38,7 @@
     <!-- Facebook -->
     <div class="counter-container">
       <i class="fab fa-facebook fa-3x"></i>
-      <div class="counter" data-target="7500">7500</div>
+      <div class="counter" data-target="7500"></div>
       <span>Facebook Fans</span>
     </div>
     <!-- Facebook -->
