--- a/JavaScript/06-ScrollAnimation/index.html
+++ b/JavaScript/06-ScrollAnimation/index.html
@@ -8,6 +8,20 @@
     <title>Scroll Animation</title>
   </head>
   <body>
+    <h1>Scroll To See The Animation</h1>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+    <div class="box"><h2>Content</h2></div>
+
     <!-- Script -->
     <script src="./script.js"></script>
   </body>
