--- a/JavaScript/07-SplitLandingPage/index.html
+++ b/JavaScript/07-SplitLandingPage/index.html
@@ -8,6 +8,22 @@
     <title>Split Landing Page</title>
   </head>
   <body>
+    <div class="container">
+      <!-- Split-left -->
+      <div class="split-left">
+        <h1>Playstation 5</h1>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+      <!-- Split-left -->
+
+      <!-- Split-right -->
+      <div class="split-left">
+        <h1>XBox Series X</h1>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+      <!-- Split-right -->
+    </div>
+
     <!-- Script -->
     <script src="./script.js"></script>
   </body>
